--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 * {
     font-family: Tahoma, sans-serif;
     font-size: 18px;
-    color: #8a8d91;
+    color: var(--dark-neutral);
     box-sizing: border-box;
 }
 
@@ -15,13 +15,34 @@ body {
     height: 100vh;
 }
 
+:root {
+    --bright-purple: #734B5e;
+    --purple: #846A6A;
+    --gray-purple: #A2999E;
+    --orange: #BC5F04;
+    --dark-gray: #353B3C;
+    --gray: #C6C7C4;
+    --light-gray: #EEF0F2;
+
+    --dark-neutral: var(--dark-gray);
+    --medium-neutral: var(--gray);
+    --light-neutral: var(--light-gray);
+    
+    --bright-color: var(--bright-purple);
+    --medium-color: var(--purple);
+    --muted-color: var(--gray-purple);
+    --accent-color: var(--orange);
+
+
+}
+
 
 /*Header formatting*/
 
 
 .header {
     display: flex;
-    background-color: #A6A57A;
+    background-color: var(--muted-color);
     align-items: center;
 }
 
@@ -32,7 +53,7 @@ body {
 h1 {
     font-weight: bold;
     font-size: 60px;
-    color: #565857;
+    color: var(--bright-color);
 }
 
 ul {
@@ -45,7 +66,7 @@ ul {
 
 a {
     text-decoration: none;
-    color: #565857;
+    color: var(--bright-color);
 }
 
 
@@ -60,7 +81,7 @@ a {
 
 .overview{
     display: flex;
-    background-color: #A6A57A;
+    background-color: var(--muted-color);
     justify-content: center;
     align-items: center;
     gap: 72px;
@@ -79,12 +100,12 @@ h2 {
 }
 
 .overview-paragraph, .overview-header {
-    color: #734B5e;
+    color: var(--bright-color);
 }
 
 .portfolio-button {
-    background-color: #BC5F04;
-    color: #734B5e;
+    background-color: var(--medium-neutral);
+    color: var(--bright-color);
     width: 200px;
     align-self: center;
     border-radius: 20px;
@@ -94,8 +115,8 @@ h2 {
 }
 
 .portfolio-button:hover {
-    background-color: #8a8d91;
-    color: #734B5e;
+    background-color: var(--dark-neutral);
+    color: var(--bright-color);
     width: 200px;
     align-self: center;
     border-radius: 20px;
@@ -117,9 +138,9 @@ h2 {
     max-height: 36px;
     justify-content: space-around;
     align-items: center;
-    background-color: #A6A57A;
+    background-color: var(--muted-color);
 }
 
 .footer-text {
-    color: #734B5e;
+    color: var(--bright-color);
 }
